--- a/conda.yml
+++ b/conda.yml
@@ -1,5 +1,8 @@
-name: fast-form
+name: cee-hacks-ml
 channels:
   - conda-forge
 dependencies:
-  - python=3.9.0
+  - python=3.8.5
+  - nbconvert=5.5.0
+  - notebook=5.7.10
+  - nb_conda_kernels=2.3
