--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@
 #    pip-compile requirements.in
 #
 appdirs==1.4.4            # via virtualenv
+appnope==0.1.0            # via ipykernel, ipython
 attrs==20.3.0             # via pytest
 autopep8==1.5.4           # via -r requirements.in
 backcall==0.2.0           # via ipython
